# mimi-bro

./: .gitignore  Dockerfile  README.md  README_zh.md  docker-build.sh  docker-compose.yml  pyproject.toml  setup-cursor-cli.sh
.bro/: config.toml
broker/: cli.py  planner.py  task.py
broker/agent/: docker.py  runner.py
broker/decision/: propose.py  record.py  scoring.py
data/: skills.json
docs/: BUILD_LOG.md  CURSOR_CLI_USAGE.md  DESIGN.md  SKILL.md  TECHNICAL_SELECTION.md  TERMINOLOGY.md
scripts/: diagnose-137.sh  test_mergetool.py  verify_worktree_test.sh
src/: BACKEND_SCOPE.md  agent.py
src/broker/: context.py  planner.py  task.py  task_types.py
src/broker/agent/: docker.py  execution_common.py  local.py  runner.py
src/broker/audit/: skeleton.py  store.py
src/broker/cli/: __main__.py  main.py  parallel.py  skill.py  worker.py
src/broker/container/: manager.py
src/broker/decision/: propose.py  record.py  rules.py  scoring.py
src/broker/model/: plan_item.py  (+2 more)
src/logs/: decisions.jsonl
tasks/: demo.yaml
tests/: test_audit_phase42.py  test_audit_phase51.py  test_runner_validation.py  test_task_validation.py  test_worktree_parallel.py
workers/: TEST_SCENARIOS.md  backend-dev.json  backend-manager.json  demo-greetings.json  demo-two-agents.json  diag-say-hello-parallel.json  diag-say-hello.json  euler.json  frontend-dev.json  frontend-manager.json  test-git-committer.json  test-greetings.json  test-manager.json  test-parallel-deps.json  test-parallel.json  test-worker.json  test-worktree-manager-with-skills.json  test-worktree-manager.json
(+33 files in other folders)
