[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "mimi-bro"
version = "0.1.0"
description = "Mimi-Bro for multi-agent Cursor CLI orchestration"
requires-python = ">=3.11"

dependencies = [
  "typer[all]",
  "docker",
  "networkx",
  "rich",
  "textual",
  "fastapi",
  "uvicorn[standard]"
]

[project.scripts]
bro = "broker.cli:app"
